Revised on questions that needed changes

--- a/Creative Design For The Web/Assignments/practicalLab/problem1.html
+++ b/Creative Design For The Web/Assignments/practicalLab/problem1.html
@@ -28,7 +28,7 @@
                 <li>USA: EATON JAGGER</li>
             </ol></li>
         </ul>
-        <small>An American got bronze in Street Skateboarding! Woohoo!!</small>
+        <pre>An American got bronze in Street Skateboarding! Woohoo!!</pre>
         <!--First use of a link here, with the link linking to the results of the competition categories.-->
         <p>Obviously, you should cite your sources. What kind of student would you be if you didn't? <a href="https://olympics.com/tokyo-2020/olympic-games/en/results/all-sports/olympic-schedule.htm">Here you go.</a></p>
         <p>Validate the page, and you are good to move on!</p>
