--- a/Creative Design For The Web/Assignments/practicalLab/problem5.html
+++ b/Creative Design For The Web/Assignments/practicalLab/problem5.html
@@ -14,7 +14,10 @@
             and table datum cells are white. For your convenience, a style sheet is linked 
             in that makes the "tiles" a nice size.
         </p>
-        <table align="center">
+        <!--align: center has been removed from here and put in the CSS file, as nu html checker gives an error for not
+        css at this and that was part of the rubric. 
+        If that's an issue, the line would have been written as <table align="center"-->
+        <table>
             <!--First row. th goes to the next row, both tds stay on row 1.-->
             <tr>
                 <td colspan="2"></td>
