--- a/Creative Design For The Web/Assignments/practicalLab/problem2.html
+++ b/Creative Design For The Web/Assignments/practicalLab/problem2.html
@@ -13,11 +13,11 @@
         <!--Pretty simple stuff, to make clicking on the image interactable, I nested a img tag inside a link tag where the argument for the text was.-->
         <p>
             <a href="https://en.wikipedia.org/wiki/Nat_King_Cole"><img src="NatKingCole.jpg" alt="Nat King Cole, the first Black American to host a TV Show." width="400"></a><br>
-            <br><b>Nat King Cole</b> was the first Black American to host a TV show: NBC's The Nat King Cole Show.
+            <br><b>Nat King Cole</b> was the first Black American to host a TV show: NBC's <i>The Nat King Cole Show</i>.
         </p>
         <p>
             <a href="https://en.wikipedia.org/wiki/Bryant_Gumbel"><img src="BryantGumbel.jpg" alt="Bryant Gumbel, the first Black person to host a morning TV show" width="400"></a><br>
-            <br><b>Bryant Gumbel</b> was the first Black person to host a network morning show when he joined NBC's Today Show.
+            <br><b>Bryant Gumbel</b> was the first Black person to host a network morning show when he joined NBC's <i>Today Show</i>.
         </p>
         <!--using special characters, available with &"";, the quotations being some kind of string that represents a special character.-->
         <h2>Time for some Math Review</h2>
