Notes and Final Project Work

--- a/Creative Design For The Web/Assignments/roomDesign/roomdesign.html
+++ b/Creative Design For The Web/Assignments/roomDesign/roomdesign.html
@@ -1,28 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Design Your Room</title>
+        <title>Box Document</title>
         <link rel="stylesheet" href="roomdesign.css">
-        <meta charset="UTF-8">
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap');
+        </style>
     </head>
-
-    <nav class="flex-nav">
-        <a href="#firstRoom">First Room</a>
-        <a href="secondRoom">Second Room</a>
-        <a href="thirdRoom">Third Room</a>
-    </nav>
-
     <body>
-        <div id="firstRoom">
-            <!--first room-->
+        <div class="room1">
+            <div id="sofa">Sofa</div>
+            <div id="table">Table</div>
+            <div id="frame">Picture Frame</div>
+            <div id="rug">Rug</div>
+            <div id="door">Door</div>
         </div>
 
-        <div id="secondRoom">
-            <!--second room-->
+        <div class="room2">
+            <div id="TV"></div>
+            <div id="bookshelf1">
+                <img src="bookshelf.png" alt="Bookshelf">
+            </div>
+            <div id="bookshelf2">
+                <img src="bookshelf.png" alt="Bookshelf">
+            </div>
+            <div id="tvstand">
+                <img src="tvstand.png" alt="TV Stand">
+            </div>
+            <div id="pictureFrame">
+                <img src="picture.jpg" alt="Framed Picture">
+            </div>
         </div>
-
-        <div id="thirdRoom">
-            <!--third room-->
-        </div>
+        <div class="room3">
+            <h2>Arcade</h2>
+            <h3>What do you want to play?</h3>
+            <div class="game-container">
+              <div class="game1">
+                <p>Pac-Man</p>
+                <img src="pacman.png" alt="Pac-Man">
+              </div>
+              <div class="game2">
+                <p>Space Invaders</p>
+                <img src="spaceinvaders.png" alt="Space Invaders">
+              </div>
+              <div class="game3">
+                <p>Pong</p>
+                <img src="pong.png" alt="Pong">
+              </div>
+            </div>
+          </div>
     </body>
 </html>
