Filled out and finished home and comp pages

--- a/Creative Design For The Web/Final/homepage/homeContent.html
+++ b/Creative Design For The Web/Final/homepage/homeContent.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Homepage | S.M.A.R.T #6932</title>
+        <title>Home | SMART #6932</title>
         <!--CSS to change the navbar and bg across all pages-->
         <link rel="stylesheet" href="../global/navbar+bg.css">
         <!--CSS to change individual file-->
@@ -20,9 +20,10 @@
             <li><a href="../comps/compContent.html">Competitions</a></li>
             <li><a href="../docs/docsContent.html">Docs</a></li>
             <li><a href="../gallery/galleryContent.html">Gallery</a></li>
-            <li><a href="../about/aboutContent.html">SMART#6932</a></li>
-          </ul>
+            <li><a href="../homepage/homeContent.html">SMART#6932</a></li>
+        </ul>
         <hr>
+        
         <!--First container, has the main page element with logo and SMART-->
         <div class="container">
             <div class="smartText">
@@ -60,6 +61,56 @@
                     An aspect about our team we take pride in is that we strive to make unqiue robots each year. We try to make a different, wacky robot each year, one that innovates and stands out.
                     Our team spans about 15 members and two mentors, and we have Design, Build, Code, and PR teams that all accomplish unique tasks critical to our team's outreach and success at competition.
                 </p>
+            </div>
+            <div class="teamWhere">
+                <h2>Where is SMART?</h2>
+                <p>Right now, we're in our off-season. Over the summer, we held two STEM camps: one at our high school for 9th-12th graders, and one at our nearby community college, SCC, for rising 5th-8th graders.
+                    We're also recruiting for our upcoming 2025 FRC season.
+                </p>
+            <div class="image">
+                <img src="2024TeamImage.jpg" alt="2024 Team image">
+            </div>
+            </div>
+            <div class="whatWeDo">
+                <h2>What do we do?</h2>
+                <h3>In the Classroom</h3>
+                <p>Through SMART, our team members build essential skills in engineering, entrepreneurship, and teamwork, and they do it in a fun and competitive environment.
+                    Everyone on the team learns something about how to build, program, and market not just robots, but other things later in life.
+                    We don't just meet to work on our robot and space, we meet to talk with friends, learn about STEM, build teamwork skills, and change our community for the better.
+                </p>
+                <h3>In the Community</h3>
+                <p>We want to give back to the community as they have to us. We support our local FIRST teams in as many ways as we can.
+                    From volunteering at tournaments for FIRST Competitions, to mentoring for FIRST Lego League and FIRST Lego League Explore teams.
+                    We even bring our robot to local events around us, like our highschool's STEM Night, Southwestern Community College's STEM night, Greening up the Mountains, and Dillsboro's Lights and Luminaries.
+                    Every time we attend a local even like that, our goal is to inspire young kids to not just join the team, but find a new passion for something they may not have heard before.
+                </p>
+                <h3>At the Competitions</h3>
+                <p>We love going to competitions and meeting other teams in our area. We strive to make sure that everyone has a good competition day by talking to other teams and making sure they
+                    know we're here to support and care for them. We also work together in our pit to make sure the robot works and can be put on the field quickly.
+                    The competition environment can be stressful at times, but one of our biggest goals at competitions is to make sure that others enjoy their time there.
+                </p>
+            </div>
+            <div class="video">
+                <h2>2024 Team Video</h2>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/b2gS6FdDZfY?si=Vrs4wnEUywcakR1f" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <hr>
+            <div class="sponsors">
+                <h2>Sponsors</h2>
+                <table>
+                    <tr>
+                        <td><a href="https://www.jcpsnc.org/"><img src="./sponsors/jcpslogo.svg" alt="JCPS"></a></td>
+                        <td><a href="https://www.nasa.gov/"><img src="./sponsors/nasaLogo.png" alt="NASA"></a></td>
+                        <td><a href="https://www.wcu.edu/"><img src="./sponsors/WCULogo.png" alt="WCU"></a></td>
+                        <td><a href="https://www.southwesterncc.edu/"><img src="./sponsors/SCCLogo.png" alt="SCC"></a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="https://www.optimum.com/"><img src="./sponsors/optimumLogo.png" alt="Optimum"></a></td>
+                        <td><a href="https://atssafety.com/"><img src="./sponsors/ATSLogo.png" alt="ATS"></a></td>
+                        <td><a href="https://www.andyshawford.com/"><img src="./sponsors/andyshawLogo.webp" alt="Andy Shaw"></a></td>
+                        <td><a href="https://www.southwesterncc.edu/stem/smokymtnstem"><img src="./sponsors/STEMLogo.png" alt="Smoky Mountain STEM Collaborative"></a></td>
+                    </tr>
+                </table>
             </div>
         </div>
         
